--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,8 +1,10 @@
 .footer {
+  // align-self: flex-start;
   border-top: 1px solid var(--black-030);
-  padding: 20px 15px 30px;
-  position: sticky;
+  margin-top: 30px;
+  padding: 40px 20px 50px;
+  // position: sticky;
   text-align: center;
-  top: 100vh;
+  // top: 100vh;
   width: 100%;
 }
