--- a/styles/globals/layout.scss
+++ b/styles/globals/layout.scss
@@ -29,14 +29,32 @@
   // flex-wrap: wrap;
   // justify-content: space-around;
 
+  // flex-direction: column;
+
   // & > div {
   //   // flex-shrink: 0;
   //   flex-grow: 1;
   // }
+  flex-direction: column; // disables sticky footer, but expands full width
 }
 
 .container > div {
   // flex: 1 0 100%;
+  // flex-grow: 1;
+
+  // display: flex;
+  // flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+
+.footer {
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
 
 /* Columns
