--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -5,23 +5,30 @@
   padding: 20px;
   width: 500px;
   z-index: 10;
+  /* background: lightblue; */
 }
 
 .xButton {
   background: none;
   border: none;
+
   cursor: pointer;
+  float: right;
   font-size: 20px;
 }
 
 .header {
-  display: flex;
+  /* border: 1px solid red; */
+  /* display: flex;
   font-size: 25px;
-  justify-content: flex-end;
+  justify-content: flex-end; */
+  /* background: pink; */
+  /* overflow: hidden; */
 }
 
 .body {
   padding: 0px;
+  /* background: lightgray; */
 }
 
 .overlay {
