--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -2,33 +2,25 @@
   background: white;
   border-radius: 15px;
   min-height: 100px;
-  padding: 20px;
+  padding: 30px 40px;
   width: 500px;
   z-index: 10;
-  /* background: lightblue; */
 }
 
 .xButton {
   background: none;
   border: none;
-
   cursor: pointer;
   float: right;
   font-size: 20px;
 }
 
 .header {
-  /* border: 1px solid red; */
-  /* display: flex;
-  font-size: 25px;
-  justify-content: flex-end; */
-  /* background: pink; */
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .body {
   padding: 0px;
-  /* background: lightgray; */
 }
 
 .overlay {
