--- a/styles/ModalForm.module.css
+++ b/styles/ModalForm.module.css
@@ -1,3 +1,10 @@
+.errorMessage {
+  color: red;
+  font-size: 18px;
+  margin-top: 10px;
+  text-align: center;
+}
+
 .form .section {
   margin-top: 10px;
 }
@@ -34,8 +41,21 @@
 }
 
 .buttonContainer {
-  /* background: pink; */
   display: flex;
   justify-content: space-around;
   margin-top: 25px;
+}
+
+.userSelect {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M4 9l8 8l8-8" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></g></svg>')
+    96% / 6% no-repeat #fff;
+  border-radius: 5px;
+  border: 1px solid #000;
+  font-size: 20px;
+  height: 40px;
+  padding: 5px 20px 7px 10px;
+  width: 100%;
 }
