--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,10 +1,7 @@
 .footer {
-  // align-self: flex-start;
   border-top: 1px solid var(--black-030);
+  flex-shrink: 0;
   margin-top: 30px;
   padding: 40px 20px 50px;
-  // position: sticky;
   text-align: center;
-  // top: 100vh;
-  width: 100%;
 }
