--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   background-image: url('/images/ibm-header.jpg');
   background-repeat: no-repeat;
-  height: 300px;
+  min-height: 300px;
   text-align: center;
   width: 100%;
 
